2010-09-16  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp (c-): Added the ability to subtract a constant
	to a vector, or to "subtract" a vector from a constant.

2010-09-15  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp (c+): Added the ability to add a constant to a
	vector.

2010-09-14  Rudy Neeser  <rudy.neeser@gmail.com>

	* interpolate.lisp (bilinear-interpolation): Added a method to
	perform bilinear-interpolation.

2010-05-20  Rudy Neeser  <rudy.neeser@gmail.com>

	* l-math.asd (:l-math): Version bump.

	* vector.lisp (x,y,z,w): Ensure that the setf-expanders for these
	forms coerce the new value to a double.

	* matrix.lisp (matrix-elt): Ensured that new elements are coerced
	to double in the setf-expander.

	* vector.lisp (elt): Coerces the new value to a double in the
	setf-expander.
	(initialise-data): Ensure that the vector's elements are
	initialised and set to double.
	(make-vector): Ensure the the initial-elements are coerced to a
	double.

	* matrix.lisp (initialise-data): Ensure that the matrix elements
	are initialised, and that the matrix is an appropriate type.

	* generics.lisp (equivalent): Added an IGNORE statement to fix a
	warning in CLISP

2010-05-11  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (to-homogenous): Added an implementation to
	transform vectors represented as lists into homogenous
	coordinates.
	(to-homogenous): ditto for VECTOR objects

	* generics.lisp (to-homogenous): Added a method for lifting
	something into homogenous space.

	* vector.lisp (to-list): Added an implementation that will
	transform vectors into lists.

	* generics.lisp: Created a generic method that will transform
	objects into lists.

	* translation.lisp: Added a file for managing translation
	matrices.

	* scale.lisp (create-scale-matrix): Created a method to create
	non-uniform scales.
	(create-uniform-scale-matrix): Returns a matrix that performs
	uniform scaling.
